--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
             </div>
             </div>
             <hr>
-            <p class="footcopyright">Panda,Harshad & Avi ||All Rights Reserved </p>
+            <p class="footcopyright">Mihir ,Harshad & Avi ||All Rights Reserved </p>
             
             </footer>
 
